[gd_scene load_steps=23 format=2]

[ext_resource path="res://Player Assets/HUD/Crosshair + Hitmarker/crosshair.png" type="Texture" id=1]
[ext_resource path="res://Player Assets/Weapons/Default/sprite_0.png" type="Texture" id=2]
[ext_resource path="res://Player Assets/Weapons/Default/sprite_2.png" type="Texture" id=3]
[ext_resource path="res://Player Assets/HUD/TBFFONT.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://Player Assets/HUD/hud.gd" type="Script" id=6]
[ext_resource path="res://Player Assets/HUD/Healthbar/healthbarunder.png" type="Texture" id=7]
[ext_resource path="res://Player Assets/HUD/Healthbar/healthbarover.png" type="Texture" id=8]
[ext_resource path="res://Player Assets/HUD/Healthbar/healthbarprogress.png" type="Texture" id=9]
[ext_resource path="res://Player Assets/HUD/Crosshair + Hitmarker/hit.wav" type="AudioStream" id=11]
[ext_resource path="res://Player Assets/HUD/Crosshair + Hitmarker/hitmarker.png" type="Texture" id=12]
[ext_resource path="res://Player Assets/HUD/Crosshair + Hitmarker/hitmarker.gd" type="Script" id=13]
[ext_resource path="res://Player Assets/tbffont.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://tbffont.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Player Assets/HUD/minimap camera.tscn" type="PackedScene" id=16]

[sub_resource type="Environment" id=15]
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.25

[sub_resource type="Animation" id=18]
resource_name = "minimap_menu"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1620, 540 ), Vector2( 1920, 540 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=12]
size = 48
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=2]
size = 72
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=16]
resource_name = "health_bars_menu"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 110 ) ]
}

[sub_resource type="DynamicFont" id=9]
size = 64
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=17]
resource_name = "technique_bar_menu"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 100 ) ]
}

[node name="HUD" type="Node2D"]
pause_mode = 2
script = ExtResource( 6 )

[node name="Minimap" type="ViewportContainer" parent="."]
margin_left = 1620.0
margin_top = 540.0
margin_right = 2220.0
margin_bottom = 1140.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
stretch = true

[node name="Viewport" type="Viewport" parent="Minimap"]
size = Vector2( 599, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2" parent="Minimap/Viewport" instance=ExtResource( 16 )]
transform = Transform( 2, 0, 0, 0, -8.74228e-08, 2, 0, -2, -8.74228e-08, 0, 3000, 0 )
cull_mask = 1048568
environment = SubResource( 15 )
size = 0.001
near = 0.01
far = 3000.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Minimap"]
anims/minimap_menu = SubResource( 18 )

[node name="HitMarker" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 12 )
script = ExtResource( 13 )

[node name="Crosshair" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="WeaponSprite" type="AnimatedSprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 10, 10 )
frames = SubResource( 10 )

[node name="InteractText" type="Label" parent="."]
margin_left = 495.0
margin_top = 600.0
margin_right = 1425.0
margin_bottom = 652.0
grow_horizontal = 2
custom_fonts/font = SubResource( 12 )
align = 1
valign = 1

[node name="Health Bars" type="Node2D" parent="."]

[node name="HealthBar" type="TextureProgress" parent="Health Bars"]
margin_left = 10.0
margin_top = 625.0
margin_right = 1034.0
margin_bottom = 1649.0
rect_scale = Vector2( 0.75, 0.75 )
max_value = 90.0
step = 0.0
value = 90.0
texture_under = ExtResource( 7 )
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 9 )
tint_progress = Color( 0, 1, 0, 1 )

[node name="OverhealthBar" type="TextureProgress" parent="Health Bars"]
margin_left = 10.0
margin_top = 625.0
margin_right = 1034.0
margin_bottom = 1649.0
rect_scale = Vector2( 0.75, 0.75 )
value = 10.0
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 9 )
tint_progress = Color( 0, 0.321569, 1, 1 )

[node name="HealthText" type="RichTextLabel" parent="Health Bars"]
anchor_right = 0.303
margin_left = 17.0
margin_top = 978.0
margin_right = 761.0
margin_bottom = 1051.0
custom_fonts/normal_font = SubResource( 2 )
text = " 100/100
"
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Health Bars"]
anims/health_bars_menu = SubResource( 16 )

[node name="Technique Bar" type="Node2D" parent="."]

[node name="TechniqueBar" type="ProgressBar" parent="Technique Bar"]
margin_left = 900.0
margin_top = 960.0
margin_right = 1047.0
margin_bottom = 1072.0
value = 50.0
percent_visible = false

[node name="TechniqueCharge" type="RichTextLabel" parent="Technique Bar"]
margin_left = 927.0
margin_top = 985.0
margin_right = 1069.0
margin_bottom = 1045.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 9 )
text = "50"
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Technique Bar"]
anims/technique_bar_menu = SubResource( 17 )
